src/App.css
@import url('https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined');
@import url('https://fonts.googleapis.com/css?family=Montserrat|Red+Hat+Text|Lexend+Exa|Roboto|Open+Sans');

.App {
  text-align: center;
}

body {
  background-color: #fdfdfd;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Red Hat Text', 'Open Sans', Arial, sans-serif;
}

/* HEADER */


.navbar .row {
  width: 100%;
}

.navbar-dark .navbar-nav .nav-link {
  color: rgba(255,255,255,.9) !important;
}

.branding-col {
  padding-left: 58px !important;
  font-family: 'Red Hat Text';
}

.navbar .login {
  float: right;
}

.navbar-nav li {
  margin: 0 12px 0 0;
}

.header-user .nav-link {
  text-transform: capitalize; 
  margin-right: 14px;
}

.header-user img {
  max-height: 30px;
  margin: 0 4px 0 0;
  padding: 0 0 2px 0;
}

/* end HEADER */

h1{
  padding: 20px 0 14px 0;
  text-transform: uppercase;
  font-weight: 400;
}

.container {
  background: none;
}

.wrapper > .container > .row > div {
  background: #ffffff;
}

.wrapper {
  background: #f3f9ff;
  padding-bottom: 26px;

    /* Firefox */
  min-height: -moz-calc(100vh - 97px);
  /* WebKit */
  min-height: -webkit-calc(100vh - 97px);
  /* Opera */
  min-height: -o-calc(100vh - 97px);
  /* Standard */
  min-height: calc(100vh - 97px);
}

.btn .material-icons, .btn .material-icons-outlined{
  font-size: 26px; 
}

table td {
  vertical-align: middle;
}

.owner-content {
  margin-top: 20px;
  padding: 12px 0 20px 0;
  border: 1px solid #f5f5f5;
  -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.33);
  -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.33);
  box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.33);
}

.owner-content .table td, .table th {
  vertical-align: middle;
}
 
.thead-dark th {
  font-weight: normal;
  border-width: 3px;
}

button.update{
  background-color: #28a745;
  color: #ffffff;
  padding: 5px 3px 0 3px;
}

.update i {
  font-size: 19px !important;
}

.delete-col {
  width: 100px;
}

.delete i {
  color: #bd2130;
  font-size: 33px !important;
}

button.delete{ 
  padding: 3px 3px 0 3px;
}

.add button {
  float: right;
  margin: 14px 15px 0 0px;
  background-color: #007bff;
}

.add button:hover {
  background-color: #004fa5;
}

.add-form {
  max-width: 600px !important;
}
 

.add-form fieldset {
  background-color: #f5f5f5;
  padding: 12px 20px;
}

.add-form fieldset:last-of-type {
  padding-bottom: 20px;
}

.add-form button {
  margin-top: 20px;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.footer {
  /* position: absolute;
  bottom: 0; */
  width: 100%;
  height: 40px;
  background-color: #343a40;
}

/* LIST EVENTS COMPONENT */

.list-events-component h1 {
  padding-bottom: 0;
}

.list-events-component h6 {
  padding-bottom: 20px;
}

.event-truckAddress-col{
  width: 200px;
}

.event-truckLogo-cell{
  width: 120px;
}

.event-truckLogo-cell img {
  height: 62px;
  border-radius: 8px;
}

.event-truckName-cell {
  text-align: left;
  font-size: 18px;
  width: 318px;
}

.event-truckName-cell a {
  font-family: 'Red Hat Text', 'Open Sans', Arial, sans-serif;
  color: #003267;
}

/* DIRECTORY */

.directory-tile {
  display: inline-block;
  width: 300px;
  height: 280px; 
  padding: 22px 0 18px 0;
  margin-bottom: 14px;
}

.directory-tile:hover {
  background-color: #f3f3f3;
}

.directory-tile h3, .directory-tile a {
  font-family: 'Red Hat Text', 'Open Sans', Arial, sans-serif;
  font-size: 20px;
  font-weight: bold;
  color: #003267;
}

.directory-tile h4 {
  background-color: #1155a7;
  color: #ffffff;
  width: fit-content; 
  display: block;
  margin: 8px auto 0 auto;
  padding: 4px 8px;
  font-weight: 300;
  font-size: 12px;
  border-radius: 4px;
}

.directory-tile img {
  max-height: 170px;
  border: 3px solid #f3f3f3;
  border-radius: 10px;
  padding: 2px;
}

/* TRUCK PROFILE COMPONENT */


.profile-banner {
  margin-bottom: 18px;
}

.profile-banner h1{
  padding-top: 45px;
}

.truck-profile-component button {
  width: 150px;
}

.truck-profile-component h4 {
  background-color: #1155a7;
  color: #ffffff;
  width: fit-content; 
  display: block;
  margin: 24px auto 0 auto;
  padding: 4px 15px;
  font-weight: 300;
  font-size: 19px;
  border-radius: 4px;
}

.truck-profile-component h5 {
  font-size: 19px;
  margin-top: 60px;
} 

.truck-profile-component img{
  width: 250px;
}
 
.add-form {
  margin-bottom: 18px;
}

.add-event-btn {
  clear: both;
}

.social-icons{
  text-align: center;
  padding-top: 24px;
  margin-top: 30px;
}
 

svg.svg-inline--fa.fa-facebook-f.fa-w-10, svg.svg-inline--fa.fa-yelp.fa-w-12, svg.svg-inline--fa.fa-twitter.fa-w-16 {
  color: #ffffff;
  padding: 20px;
  font-size: 30px;  
  width: 60px; 
  height: 60px;
  text-align: center;
  text-decoration: none;
  margin: 5px 4px; 
}

.fa-facebook-f {
  background: #3B5998;
}

.fa-twitter {
  background: #55ACEE;
}

.fa-yelp {
  background: #c41200;
}

.fa-facebook-f:hover, .fa-twitter:hover, .fa-yelp:hover  {
  opacity: 0.8;
}

/* FORMS */

input[type="text"], input[type="password"] {
  padding-left: 6px; 
}

label{
  margin-right: 6px;
}




/* .App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
} */

